engine/codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies with pending input

## Window 1
-- request 1 (request; First request) --
00:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    first prompt
-- request 2 (request; Second request) --
03:reasoning:summary=thinking:encrypted=true
04:function_call/shell:{"command":"echo preserved tool call"}
05:message/assistant:
    first answer
06:function_call_output:unsupported call: shell
07:message/user:
    second prompt
